--- a/app/app.conf
+++ b/app/app.conf
@@ -44,11 +44,12 @@ password=123123
 #idle_timeout=300
 
 [mail]
-addr=smtp.qq.com
-mail_user_name=onqee
-mail=aa@qq.com
-mail_password=xxx
-mail_user=aa
+addr=smtp.163.com
+mail_user_name=kereme
+mail=kereme@163.com
+mail_password=gufprgsluwlmdldr
+mail_user=kereme@163.com
+mail_to_list=luhan:a@kere.me,jiorry@hotmail.com,jiorry@163.com
 
 [other]
 hgt_check_minute=5
