--- a/app/app.conf
+++ b/app/app.conf
@@ -45,10 +45,10 @@ password=123123
 
 [mail]
 addr=smtp.163.com
-mail_user_name=kereme
-mail=kereme@163.com
-mail_password=gufprgsluwlmdldr
-mail_user=kereme@163.com
+mail_user_name=aa
+mail=aa@163.com
+mail_password=aa
+mail_user=aa@163.com
 mail_to_list=luhan:a@kere.me,jiorry@hotmail.com,jiorry@163.com
 
 [other]
