--- a/app/app.conf
+++ b/app/app.conf
@@ -29,7 +29,7 @@ host=127.0.0.1
 port=5432
 user=postgres
 password=123123
-#log=var/log/db.log
+#log=db.log
 
 #[log]
 # log level will be replace with 10 on dev mode
