--- a/app/app.conf
+++ b/app/app.conf
@@ -54,5 +54,7 @@ mail_to_list=luhan:a@kere.me,jiorry@hotmail.com,jiorry@163.com
 [other]
 hgt_check_minute=5
 hgt_check_amount=3.5
+indexb_check_minute=5
+indexb_check_value=1.1
 allow_regist=1
-holiday=20150903,20150904
+holiday=20160101
