--- a/app/app.conf
+++ b/app/app.conf
@@ -24,7 +24,7 @@ css_version=a
 
 [db]
 driver=postgres
-dbname=stock
+dbname=keredat
 host=127.0.0.1
 port=5432
 user=postgres
@@ -57,4 +57,4 @@ hgt_check_amount=3.5
 indexb_check_minute=5
 indexb_check_value=1.1
 allow_regist=1
-holiday=20160101
+holiday=20170101
