--- a/app/app.conf
+++ b/app/app.conf
@@ -30,10 +30,13 @@ port=5432
 user=postgres
 password=123123
 #log=db.log
+level=notice
+#logstore=file
 
-#[log]
+[log]
 # log level will be replace with 10 on dev mode
-#level=7
+level=notice
+#logstore=file
 
 #[cache]
 #driver=redis
